# SkillBox-cpp

./: CMakeLists.txt  SkillBox.h  main.cpp  readme.md  test.cpp
format/: format_script.sh  gcc_format.sh
sources/: m_11_1.cpp  m_11_2.cpp  m_11_3.cpp  m_11_4.cpp  m_12_1.cpp  m_12_2.cpp  m_13_1.cpp  m_13_2.cpp  m_13_3.cpp  m_14_1.cpp  m_14_2.cpp  m_14_3.cpp  m_14_4.cpp  source.cpp
test/: doctest.h
